--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -60,6 +60,8 @@
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous" />
+        crossorigin="anonymous"></script>
+    
+    {{ moment.include_moment() }}
   </body>
 </html>
