--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,6 +37,15 @@
             </li>
             {% else %}
             <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="{{ url_for('main.messages') }}">
+                    {{ _('Messages') }}
+                    {% set unread_message_count = current_user.unread_message_count() %}
+                    <span id="message_count" class="badge text-bg-danger {{ 'd-none' if not unread_message_count }}">
+                        {{ unread_message_count }}
+                    </span>
+                </a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" aria-current="page" href="{{ url_for('main.user', username=current_user.username) }}">{{ _('Profile') }}</a>
             </li>
             <li class="nav-item">
@@ -109,7 +118,38 @@
           });
         }
       }
+
       document.addEventListener('DOMContentLoaded', initialize_popovers);
+
+      function set_message_count(n) {
+        const count = document.getElementById('message_count');
+        count.innerText = n;
+        // Toggle visibility: Add 'd-none' if 0, remove it if > 0
+        if (n > 0) {
+            count.classList.remove('d-none');
+        } else {
+            count.classList.add('d-none');
+        }
+      }
     </script>
+    
+    {% if current_user.is_authenticated %}
+    <script>
+    function initialize_notifications() {
+      let since = 0;
+      setInterval(async function() {
+        const response = await fetch(`{{ url_for('main.notifications') }}?since=` + since);
+        const notifications = await response.json();
+        for (let i = 0; i < notifications.length; i++) {
+          if (notifications[i].name == 'unread_message_count')
+            set_message_count(notifications[i].data);
+          since = notifications[i].timestamp;
+        }
+      }, 10000);
+    }
+    document.addEventListener('DOMContentLoaded', initialize_notifications);
+    </script>
+    {% endif %}
+
   </body>
 </html>
