--- a/app/templates/messages.html
+++ b/app/templates/messages.html
@@ -2,18 +2,56 @@
 
 {% block content %}
     <h1>{{ _('Messages') }}</h1>
+
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+
     {% for post in messages %}
+        {# comment out this one
         {% include '_post.html' %}
+        #}
+
+        <table class="table table-hover">
+            <tr>
+                <td width="70px">
+                    <a href="{{ url_for('main.user', username=post.author.username) }}">
+                        <img src="{{ post.author.avatar(70) }}" />
+                    </a>
+                </td>
+                <td>
+                    {% set user_link %}
+                        <a class="user_popup" href="{{ url_for('main.user', username=post.author.username) }}">
+                            {{ post.author.username }}
+                        </a>
+                    {% endset %}
+                    {{ _('%(username)s said %(when)s',
+                        username=user_link, when=moment(post.timestamp).fromNow()) }}
+                    <br>
+                    <span id="post{{ post.id }}">{{ post.body }}</span>
+                    
+                    <div class="mt-2">
+                        <form action="{{ url_for('main.delete_message', id=post.id) }}" method="post">
+                            {{ form.hidden_tag() }}
+                            <button type="submit" value="Delete" style="border: 0; background: none;" 
+                                onclick="return confirm('Are you sure you want to delete this message?');">
+                                <i class="fa fa-trash-o" aria-hidden="true"></i>
+                            </button>
+                        </form>
+                    </div>
+                    
+                </td>
+            </tr>
+        </table>
+
     {% endfor %}
-    <nav aria-label="...">
-        <ul class="pager">
+    <nav aria-label="Post navigation">
+        <ul class="pagination">
             <li class="previous{% if not prev_url %} disabled{% endif %}">
-                <a href="{{ prev_url or '#' }}">
+                <a class="page-link" href="{{ prev_url or '#' }}">
                     <span aria-hidden="true">&larr;</span> {{ _('Newer messages') }}
                 </a>
             </li>
             <li class="next{% if not next_url %} disabled{% endif %}">
-                <a href="{{ next_url or '#' }}">
+                <a class="page-link" href="{{ next_url or '#' }}">
                     {{ _('Older messages') }} <span aria-hidden="true">&rarr;</span>
                 </a>
             </li>
