--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,12 +3,16 @@
 
 {% block content %}
     <h1>{{ _('Hi, %(username)s!', username=current_user.username) }}</h1>
+
     {% if form %}
     {{ wtf.quick_form(form) }}
     {% endif %}
+    
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
     {% for post in posts %}
         {% include '_post.html' %}
     {% endfor %}
+    
     <nav aria-label="Post navigation">
         <ul class="pagination">
             <li class="page-item{% if not prev_url %} disabled{% endif %}">
