--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -30,7 +30,8 @@
 
                 {% if post.author == current_user %}
                 <div class="mt-2" style="display: flex">
-                    <button type="submit" value="Edit" style="border: 0; background: none;">
+                    <button type="button" value="Edit" style="border: 0; background: none;"
+                        onclick="window.location.href=`{{ url_for('main.edit_post', id=post.id) }}`;">
                         <i class="fa fa-edit" aria-hidden="true"></i>
                     </button>
                     <form action="{{ url_for('main.delete_post', id=post.id) }}" method="post">
